fix: increase contrast for footer text, newsletter placeholder and primary bg color to pass wcag check

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 
 @theme {
     /* Custom Colors */
-    --color-primary: #10539c;
+    --color-primary: #004b93;
     --color-background-light: #f6f7f8;
     --color-background-dark: #111921;
 
